--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-import": "^2.9.0"
   },
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "socket.io": "^1.4.8"
   }
 }
